--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "gemoji": "^8.1.0",
     "lodash.debounce": "^4.0.8",
     "mime": "^4.0.1",
+    "mitt": "^3.0.1",
     "pinia": "^2.0.33",
     "socket.io-client": "^4.7.2",
     "sortablejs": "^1.15.0",
