--- a/crm/fcrm/workspace/frappe_crm/frappe_crm.json
+++ b/crm/fcrm/workspace/frappe_crm/frappe_crm.json
@@ -116,7 +116,7 @@
    "color": "Grey",
    "doc_view": "List",
    "label": "Contacts",
-   "link_to": "Contact",
+   "link_to": "FCRM Contact",
    "stats_filter": "[]",
    "type": "DocType"
   },
